--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -3,7 +3,7 @@
 :root {
     --cor-de-fundo: #1E1E1E;
     --verde: #6FFF57;
-    --branco: #FFFFFF;
+    --branco: #a75050;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
     --texto-fundo: rgba(58, 55, 94, 0.3);
@@ -58,6 +58,10 @@ body {
 
 .botoes {
     display: block;
+}
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
 }
 
 
